--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -13,6 +13,10 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
   width: 100%;
   z-index: 10;
 
+  @media (max-width: $mobile-max) {
+    padding: 0;
+  }
+
   &-small {
     min-height: 8vh;
   }
